Fixed expand on hover not showing gradients background (closes https://github.com/zen-browser/desktop/issues/2360 and closes https://github.com/zen-browser/desktop/issues/2350)

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -543,8 +543,13 @@
       & #TabsToolbar {
         z-index: 100 !important;
         width: 250px !important;
-        background-color: var(--zen-dialog-background);
-        border-top-color: var(--zen-colors-border);
+        
+        background: var(--zen-main-browser-background) !important;
+        background-attachment: fixed !important;
+        background-size: 2000px !important; /* Dont ask me why */
+
+        box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
+
         position: absolute;
         padding: var(--zen-toolbox-padding);
         padding-top: 0;
@@ -553,7 +558,6 @@
         -moz-window-dragging: no-drag;
         overflow: hidden;
         transition: width 0.2s !important;
-        border-right: 1px solid var(--zen-colors-border);
 
         & .tab-throbber,
         & .tab-icon-pending,
@@ -595,8 +599,6 @@
 
       &[zen-right-side='true'] #TabsToolbar {
         right: 0;
-        border-right: 0;
-        border-left: 1px solid var(--zen-colors-border);
         border-top-left-radius: var(--zen-border-radius);
         border-top-right-radius: 0;
       }
